﻿更新履歴

==== Ver 0.9.2.0(2010/05/21)
 * Ctrl+Pでユーザープロフィール画面が開いてしまうことがあったバグを修正
 * 通信時のメッセージログで時間も参照できるように
 * 設定ファイル読み込み時のエラーチェックを見直し
 * ソート順表示の方向が逆だったのを修正
 * その他機能に「この発言のRetweet回数を確認」を追加。Webでは見えなかった100人以上のRTでも確認できます。100人ごとにAPIを1消費します。（例：550人がRTしていれば6消費）
 * ニコ動の短縮パターンに漏れがあり、誤動作していたバグ修正
 * 発言履歴への追加・更新タイミング変更
 * 表示中の画像プレビューが閉じてしまう場合がある不具合修正
 * 詳細表示のユーザーアイコンダブルクリックでも発言者のホームを開けるようにした
 * 通信後に例外が起きることがあったバグを修正
 * TumblrのプレビューでPostTypeが画像以外のためにプレビュー失敗した場合にPostTypeを表示するようにした
==== Ver 0.9.1.0(2010/05/19)
 * リスト部のソート順表示が2カラムの場合に対応できていなかった問題を修正
==== Ver 0.9.0.0(2010/05/19)
 * 初期設定でのMentionsの更新間隔を180秒に、取得数を40件へ。バージョンアップの方は手動で調整してください。
 * 発言リストの列順序の初期値を変更
 * 画像プレビューをTumblrに対応(posttype=photoのみの対応となります)、フォト蔵に対応
 * 起動時のFollowersリスト取得処理に失敗した場合、初期読み込み処理の最終段階で再試行するようにした
 * Twitterが相変わらずおかしいので、一時期無効にしていた公式RTがFav済みで流れてくる件の対策を復活
 * ユーザープロフィール画面追加。フォロー状況の表示、フォロー/フォロー解除もダイアログからできます。APIを2消費します。
   * 右クリックメニュー、操作メニューにプロフィール表示を追加。ショートカットキーはAlt+P。
   * 発言詳細領域の名前表示部分の右クリックメニューから、発言者のプロフィール表示、フォロー・フォロー解除が行えるようにした
   * 発言詳細の文中にある@ID右クリックメニューからユーザープロフィールの確認ができるようにした
   * 自己紹介の部分：サムネイルと右クリックメニュー以外は、@IDやハッシュタグのリンク化など、詳細表示とほぼ同等の機能があります。
   * クリックしてジャンプできる場所はツールチップでジャンプ先URLを表示するようにした
   * 最新の発言を表示するようにした。日時とSourceも表示します。
   * 発言、自己紹介の各表示エリアで右クリックからコピー・すべて選択ができるようにした
   * ユーザー情報ダイアログで認証済みアカウントかどうかを表示するように
 * 画面が白くなる問題に対処
 * 未読カウントがずれる問題に対処
 * Altキー2回押しでフォーカスがSplitContainerに移る不具合修正
 * 自身のバージョンが取れない場合があったので、取得方法変更
 * メニュ→その他機能からもハッシュタグ関連機能にアクセスできるようにした
 * URL短縮時に、文末のスラッシュも含めるように変更
 * 発言入力欄と残文字数ラベルのフォーカス遷移順序入れ替え（MSAA対応）
 * Alt+Shift+R,Ctrl+Qが効かない場合があったバグを修正
 * 画像サムネイルのSplitterDistanceが復元されないことがあるバグ修正
 * 投稿時に投稿完了を待たないように変更。投稿失敗はメッセージで通知し、リトライ・キャンセルを選べるように。
 * 投稿重複、投稿規制をエラー扱いに
 * ふぁぼったーのURL変更
 * メニューの「片思いユーザーリスト取得」＞「すべて再取得」を廃止。直接「片思いユーザーリスト取得」をクリックしてください。
 * 設定画面に1時間あたりのAPI使用数を簡易計算して表示するようにした。Listsタブも反映されます。
 * 詳細表示の発言者名をクリックした際にHomeを開くようにした。ジャンプ先はツールチップで確認できます。
 * ニコニコ動画ID自動リンクの条件を緩和した(ID番号2桁以上へ)
 * 短縮URLの展開で、結果を一部キャッシュしていたが、キャッシュの大文字・小文字区別をしていないバグ修正
 * ハッシュタグ解析で、アルファベットに数字が続くハッシュタグを正しく認識できていなかったのを修正