@@ -5,13 +5,14 @@
  * 通信時のメッセージログで時間も参照できるように
  * 設定ファイル読み込み時のエラーチェックを見直し
  * ソート順表示の方向が逆だったのを修正
- * その他機能に「この発言のRetweet回数を確認」を追加。Webでは見えなかった100人以上のRTでも確認できます。100人ごとにAPIを1消費します。（例：550人がRTしていれば6消費）
+ * その他機能に「この発言のRetweet回数を確認」を追加。Webでは見えなかった100人以上のRTでも確認できます。100人確認ごとにAPIを1消費します。（例：550人がRTしていれば6消費）
  * ニコ動の短縮パターンに漏れがあり、誤動作していたバグ修正
  * 発言履歴への追加・更新タイミング変更
  * 表示中の画像プレビューが閉じてしまう場合がある不具合修正
  * 詳細表示のユーザーアイコンダブルクリックでも発言者のホームを開けるようにした
  * 通信後に例外が起きることがあったバグを修正
  * TumblrのプレビューでPostTypeが画像以外のためにプレビュー失敗した場合にPostTypeを表示するようにした
+ * PixivプレビューでR-18/R-18GのいずれかのタグがついたURLの場合に表示メッセージを変更するようにした
 ==== Ver 0.9.1.0(2010/05/19)
  * リスト部のソート順表示が2カラムの場合に対応できていなかった問題を修正
 ==== Ver 0.9.0.0(2010/05/19)
